summative.moria.Moria.scala.error
Compilation error:
Moria:9: error: type mismatch;
 found   : Unit
 required: Boolean
        if(a=0){
            ^