summative.moria.Moria.scala.code
def Biscuit{
  var a=0
  
  while(getCouleurSol()!=Color.GREEN){
    retourne()
  	while(!estSurBiscuit){
      
      if(estFaceMur){
        if(a=0){
           a=1
       droite()
       avance()
       gauche()
       avance()
        }else{
          return
        }
       
        
     }else{
  		avance()
 	 }
    }
    
 	 prendBiscuit()
 	 retourne()
 	 while(!estSurBiscuit){
     
  		avance()
 	 	}
   
    recule()
	  poseBiscuit()
    recule()
	
}
}


while(getCouleurSol()!=Color.GREEN){
  Biscuit
}